# potenup3-03_Utilizing_HuggingFace

./: .gitignore  1_0_huggingface.ipynb  1_10_finetuning_qwen.ipynb  1_11_fine_tuning_qwen_custom_data.ipynb  1_1_object_detection_yolo.ipynb  1_2_segmentation.ipynb  1_3_clip.ipynb  1_4_ocr.ipynb  1_5_1_basic_opencv.ipynb  1_5_2_video_opencv.py  1_5_3_video_mediapipe_hands.py  1_5_4_video_mediapipe_face.py  1_5_5_video_mediapipe_eyes.py  1_5_6_video_mediapipe_pose.py  1_5_7_video_mediapipe_collect_data.py  1_5_8_mediapipe_train.ipynb  1_5_9_mediapipe_pred.py  1_7_stt_tts.ipynb  1_8_ollama_api.ipynb  README.md  hand_data.csv  main.py  pyproject.toml  scissors_rock_paper.pkl
backend/: main.py  request_test.ipynb
frontend/: main.py
frontend/pages/: 02_segmentation.py  03_clip.py  04_chatbot_api.py  05_chatbot_history_api.py  06_summarize_meetings.py  components.py  whatis1.py  whatis2.py
project_server/: main.py
vision_project/: data.json  main.py
vision_project/pages/: 01_object_detection.py  test.py
websocket_project/server/: main.py
websocket_project/server/app/: audio_router.py  image_router.py  text_router.py
websocket_project/web/: main.py
websocket_project/web/pages/: 01_text.py  02_images.py  03_audio.py  04_webcam.py  05_ai_speaker.py
