[project]
name = "03-utilizing-huggingface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bing-image-downloader>=1.1.2",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "fastapi[standard]>=0.135.1",
    "google-cloud-vision>=3.12.1",
    "jupyter>=1.1.1",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.8",
    "mediapipe==0.10.14",
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.1.1",
    "requests>=2.32.5",
    "roboflow>=1.2.16",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "translate>=3.8.0",
    "ultralytics>=8.4.22",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
