[project]
name = "03-utilizing-huggingface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bing-image-downloader>=1.1.2",
    "bitsandbytes>=0.49.2",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "elevenlabs>=2.40.0",
    "fastapi[standard]>=0.135.1",
    "faster-whisper>=1.2.1",
    "google>=3.0.0",
    "google-cloud-vision>=3.12.1",
    "google-genai>=1.68.0",
    "jupyter>=1.1.1",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.8",
    "mediapipe==0.10.14",
    "numpy>=2.4.3",
    "ollama>=0.6.1",
    "openai>=2.29.0",
    "openai-whisper>=20250625",
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "roboflow>=1.2.16",
    "scikit-learn>=1.8.0",
    "speechrecognition>=3.15.1",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "translate>=3.8.0",
    "ultralytics>=8.4.22",
    "unsloth>=2026.3.17",
    "unsloth-zoo>=2026.3.6",
    "xgboost>=3.2.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
triton = { url = "https://github.com/woct0rdho/triton-windows/releases/download/v3.2.0-windows.post9/triton-3.2.0-cp312-cp312-win_amd64.whl" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
